--- a/tareas-app/package.json
+++ b/tareas-app/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "^4.6.0",
     "react-dom": "18.3.1",
     "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "@expo/metro-runtime": "~4.0.1",
+    "expo-checkbox": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
